# More_Phi-vst3-plugin

./: .clang-tidy  .dockerignore  .gitignore  .terraformignore  AGENTS.md  AUDIT_PONYTAIL.md  AUDIT_REPORT.md  AUDIT_REPORT_Neural_Mastering_System.md  AUDIT_VST3_COMPLIANCE_2026-06-30.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  DSP_AUDIT_REPORT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  More-Phi_Technical_Review_Report.md  README.md  SNAPPY_SNAP_COMPLETE_DOCUMENTATION.md  SYNTHETIC_AUDIO_PARAMETER_DATASET_FRAMEWORK.md  VST3_TECHNICAL_AUDIT_AND_MARKET_ANALYSIS.md  VST3_TECHNICAL_AUDIT_AND_MARKET_ANALYSIS_v2.md  _build_debug.bat  _build_lowmp.bat  _build_vcvars.bat  _buildlib.bat  _buildonly.bat  _ninja_build.bat  _ninja_plugin_only.bat  _ninja_tests.bat  _ninja_vst3.bat  _rebuild.bat  _validate.bat  agentdb.rvf  apply_compressor_final.py  apply_eq.py  apply_full_master_chain.py  apply_neutron_corrected.py  apply_neutron_dynamics.py  (+73 more)
.emergent/: emergent.yml
.reasonix/: desktop-topic-created-at.json  desktop-topic-title-sources.json  desktop-topic-titles.json
.serena/: project.yml
.specify/: feature.json
.tmp_verify/: cdx_main2.csv  sweep_loudness.py
cmake/: CompilerFlags.cmake  FetchOnnxRuntime.cmake  GenerateModelHash.cmake  PatchJuceForMSVC.cmake  mingw-w64-toolchain.cmake
docs/: AI_ASSISTANT_TEST_PROMPTS.md  AI_MASTERING_WORKFLOW_REDESIGN.md  AI_MCP_VST3_INTEGRATION_SPEC.md  AI_MCP_VST3_OPTIMIZED_INTEGRATION_SPEC.md  AI_PARAMETER_PIPELINE_DEBUG.md  API_REFERENCE.md  ARCHITECTURE.md  AUDIT_RESAMPLER_DSP_FINDING.md  AudioEngineSpec_v2.md  BUILD_STABILITY_GUIDE.md  CAPABILITIES.md  CPP_IMPLEMENTATION_STRATEGY.md  DATASET_GENERATION.md  DAW_TESTING_CHECKLIST.md  DEVELOPER_GUIDE.md  ECOSYSTEM.md  EPIC_COMPLETION_REPORT.md  EPIC_PLANNING_DOCUMENT.md  FEATURE_REFERENCE.md  GUI_QA_REPORT.md  IMPLEMENTATION_PLAN.md  LEARN_MODE_GUIDE.md  LIA_TECHNICAL_ANALYSIS.md  MASTER_ARCHITECTURAL_BLUEPRINT.md  MCP_OZONE_IMPLEMENTATION_GUIDE.md  MORPHSNAP_V2_SPEC.md  OZONE_HEADLESS_TRIGGER_FINDINGS_20260620.md  OZONE_IPC_ASSISTANT_CAPABILITIES.md  OZONE_IPC_RESEARCH_METHODOLOGY.md  OZONE_PRIVATE_IPC_LIVE_FINDINGS_20260516.md  PERFORMANCE_AUDIT_REPORT.md  PRODUCT_POSITIONING.md  PYTHON_MCP_SERVER.md  RELEASE_CHECKLIST.md  SNAPPY_SNAP_ARCHITECTURE_DESIGN.md  SNAPPY_SNAP_RESEARCH.md  TECHNICAL_AUDIT_REPORT.md  TECHNICAL_DOCUMENTATION.md  TECHNICAL_REVIEW.md  TROUBLESHOOTING_PLUGIN_DISCONNECTION.md  (+11 more)
examples/: IntegrationExamples.cpp
integration_patches/: more-phi-landing-page-plugin-licensing.patch
memory/: PRD.md  test_credentials.md
morph-plugin-blueprint/: README.md
prompts/: implement_synthetic_dataset_generator.md
research/: MCP_OZONE_IMPLEMENTATION_GUIDE.md  OZONE_HEADLESS_ASSISTANT_RUNBOOK.md  OZONE_HEADLESS_TRIGGER_FINDINGS.md  README.md  ozone_ipc_default_flat_manifest.json
scripts/: agent_client.py  audit_ozone_params.py  build-windows-safe.bat  build-windows-safe.ps1  diagnose-build-freeze.ps1  generate_test_audio.py  generate_truepeak_coeffs.py
src/: Version.cpp  Version.h
store-backend/: .env.example  package.json  tsconfig.test.json
test_reports/: FINAL_TECHNICAL_REVIEW.md  actual_cpp_results.xml  actual_cpp_results2.xml  benchmark_results.txt  cpp_test_results.xml  iteration_1.json  iteration_2.json  iteration_3.json  iteration_4.json  plugin_live_api.xml  subagent_1_report.md  subagent_2_report.md  subagent_3_report.md  subagent_4_report.md  subagent_5_report.md  subagent_6_report.md
tests/: CMakeLists.txt  LEGACY_TESTS.md  TestMorphingEngine.cpp  stress_test_dataset.py  testing-strategy.md
tests/DAW/: TestAbleton.md  TestFLStudio.md  TestLogic.md  TestMatrix.md  TestReaper.md
tests/Integration/: PerformanceTests.cpp  TestActivationE2E.cpp  TestDatasetIntegration.cpp  TestGenrePriorE2E.cpp  TestMCPIntegration.cpp  TestPluginLifecycle.cpp  TestPythonMCPIntegration.cpp  TestUserManualFeatureSurface.cpp  TestVST3AudioSignalAccuracy.cpp  TestVST3ComprehensiveE2E.cpp  TestVST3MidiAndSidechain.cpp  TestVST3ParameterAutomation.cpp
tests/Mocks/: MockInterfaces.h  MockV2Interfaces.h
tests/Performance/: BenchmarkSuite.cpp  ComprehensiveProfilingHarness.cpp  IntegratedProcessorBenchmark.cpp  IntegratedProcessorBenchmark.h
tests/Unit/: AudioBufferPoolTests.cpp  ParallelRenderTests.cpp  PerformanceProfilerTests.cpp  SIMDAudioTests.cpp  TestAIEditApplyEndToEnd.cpp  TestAIRegressions.cpp  TestAIStatusPanel.cpp  TestAdaptiveEQ.cpp  TestAgentAudioThreadIsolation.cpp  TestAgentE2E.cpp  TestAgentIsolation.cpp  TestAgentOrchestrator.cpp  TestAgentProposedActions.cpp  TestAgentRuntimeCore.cpp  TestAnalysisAgent.cpp  TestAsyncToolExecutor.cpp  TestAudioCaptureRing.cpp  TestAudioEngine.cpp  TestAuditFixes.cpp  TestAutomationControlPlane.cpp  TestBypassCrossfade.cpp  TestConcurrency.cpp  TestConductorAgent.cpp  TestCreativeAgent.cpp  TestDAWTransportForwarder.cpp  TestDSPQuality.cpp  TestDatasetModules.cpp  TestDenormals.cpp  TestE2ESignalPath.cpp  TestEcosystemConfig.cpp  TestEndToEndSignalIntegrity.cpp  TestGenreClassifierFallback.cpp  TestGenreClassifierRemap.cpp  TestGenreLoudnessPrior.cpp  TestGranularEngine.cpp  TestGravityWells.cpp  TestHostIntegration.cpp  TestIZotopeIPCAssistant.cpp  TestLLMChatClient.cpp  TestLLMConnectionValidator.cpp  (+75 more)
tests/scripts/: audio_quality_test.py  realtime_safety_test.py  run_all_tests.ps1  run_all_tests.sh  run_vst3_validator.py
tests/src/: test_rt_audio_thread_violations.cpp  test_unit_parameter_manager.cpp
tools/: izotope_ipc_decode.py  izotope_ipc_xref.py  izotope_state_diff_trace.py  linked_instance_monitor.py  ozone_disasm_poller.py  ozone_disasm_static.js  ozone_mouse_input_test.py  pluginval_report.txt  relay_link_interceptor.py  release-validate.bat  run_disasm.py  run_headless_assistant.py  run_ozone_shot2.py  run_ozone_uia_trigger.py  run_ozone_wizard.py
tools/headless_mastering_render/: BUILD.md  CMakeLists.txt  headless_render.cpp  headless_render.h
validation/: 2026-06-16_headless_validation_findings.md  FINAL_VALIDATION_REPORT.md  memory_monitor.py  (+11 more)
(+834 files in other folders)
